--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "author": "Joseph and Nourhan",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^2.2.3",
+    "bcryptjs": "^2.4.3",
+    "googleapis": "^44.0.0",
     "koa": "^2.8.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
+    "passport-google-oauth": "^2.0.0",
     "promise-mysql": "^4.1.0"
   }
 }
