--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "koa-bodyparser": "^4.2.1",
     "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
+    "koa-useragent": "^2.1.3",
     "passport-google-oauth": "^2.0.0",
     "promise-mysql": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/koa-useragent": "^2.1.2"
   }
 }
